--- a/active-contemplative.html
+++ b/active-contemplative.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>Active and Contemplative Modes</title>
   </head>
 
