--- a/tech-views.html
+++ b/tech-views.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>A Few Views on Technology</title>
   </head>
 
