--- a/tech-views.html
+++ b/tech-views.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="heading"><a href="/">Bits &amp; Pieces</a></div><div class="content"><main><h1 id="A-Few-Views-on-Technology">A Few Views on Technology</h1><h2 id="Pseudo-Amish/Point-of-no-Return">Pseudo-Amish/Point of no Return</h2><p><em>Not to be confused with actual Amish practices.</em>
+    <div class="heading"><a href="/">Bits &amp; Pieces</a></div><div class="content"><main><h1 id="A-Few-Views-on-Technology">A Few Views on Technology</h1><h2 id="Pseudo-Amish/Point-of-no-Return">Pseudo-Amish/Point of no Return</h2><p><em>Not to be confused with whatever the Amish actually believe.</em>
 All technology created before a certain date is useful and good.
 At some point things took a turn for the worse, though.
 That point might have been when the automobile was invented, or the combine
